0.5.0
Moving prefs.
Done view menu.
Done edit menu.
Done filemenu.
Re-writing menu/toolbar system.
Done single instance.
Done bookmarks.
Done No syntax hilighting.
Fixed update func menu on set prefs.
Done line highlight colour.
Removed unwanted borders from windows.
Done tabwidth.
Done hilite current line.
Done func search prefsDepth.
Done show linenumbers.
Done autoindent.
Done wrap lines.
Done scrollable menus.
Redone prefs.
Done load.
Restarted QT5 version.

0.3.0
Done nav and edit context menu.
Done search gtkqt5 documentation.
Done built in docviewer, (mostly).
Search for define now tries case sensitive then insensitive.
Done search for define.
Done open include.
Done go to definition.
Done find/replace.
Fixed highlight current line bug.
Fixed non inited pointers in document class.
Set Function menu enabled.
Done set enavbled on selected toolitems in prefs.
Done remove items from DnD prefs, and save.
Done save exit data if using quit or closing main window.
Done DnD toolbar customize in prefs.
Moved prefs to ~/.KKEditQT and ~/.KKEdit.
Font prefs changes take effect immediately, (mostly).
Done 'Apply' prefs.
Basic hightlight current line.
Basic line numbers.
Synched gtk code v0.2.6 to 0.3.0
Basic function menu.
Basic load prefs.
Basic open file.
Basic syntax highlighting.
Stared port to QT5

//TODO//
0.2.6
Updated help file and translations.
Fixed odd characters in tab name when truncated with elipses.
Fixed crash when ctags gets confused and produces an enormous function name.
Added 'Sort Tabs' to file menu.
Fixed some minor encoding to UTF8 bugs.
Fixed bug when loading certain html files.
Fixed minor callback bug in prefs/plugin prefs.
Speeded up load session.
Code clean.
Fixed bug where closing too many tabs too fast caused a segfault.
Fixed regex find lockup .
Can now do backward regex search.
Redoing regex find/replace.
Can now only spell check whole document if document is 'clean'.
Removed unneeded reference to libunique from build files.