@@ -30,7 +30,7 @@ enum {UNDOMENUITEM=0x9000,REDOMENUITEM,UNDOALLMENUITEM,REDOALLMENUITEM,CUTMENUIT
 //view
 enum {DOCSMENUITEM=0xa000,TOGGLETOOLBARMENUITEM,TOGGLETOOLWINDOWMENUITEM,TOGGLESTATUSBARMENUITEM,TOGGLEDOCVIEWMENUITEM,TOGGLELINENUMBERSMENUITEM,TOGGLELINEWRAPMENUITEM,TOGGLEHILITELINEMENUITEM,TOGGLEWHITESPACEMENUITEM,TOGGLESYNTAXHILITINGMENUITEM,TOGGLECOMPLETIONSMENUITEM};
 
-enum {GOBACKMENUITEM=0xb000,GOFORWARDMENUITEM,GOTODEFINEMENUITEM,OPENINCLUDEMENUITEM};
+enum {GOBACKMENUITEM=0xb000,GOFORWARDMENUITEM,GOTODEFINEMENUITEM,OPENINCLUDEMENUITEM,GOTOLINEMENUITEM};
 
 
 enum	{AUTOINDENT=0,SHOWNUMS,WRAP,HIGHLIGHT,SYNTAXHILITE,USESINGLE,AUTOSAVE,NODUPLICATE,NOWARN,AUTOSHOW,BEKIND,GLOBALPLUGMENU,SETFONT,MAXPREFSWIDGETS};
@@ -204,6 +204,8 @@ class KKEditClass : public QObject
 		DocumentClass				*getDocumentForTab(int tabnum);
 		void						resetAllFilePrefs(void);
 		void						goToDefinition(void);
+		void						showLineEntry(void);
+		void						gotoLine(int linenumber);
 
 //bookmark vars
 		QHash<int,bookMarkStruct>	bookMarks;
