@@ -22,8 +22,8 @@ QT_BEGIN_MOC_NAMESPACE
 QT_WARNING_PUSH
 QT_WARNING_DISABLE_DEPRECATED
 struct qt_meta_stringdata_MenuItemClass_t {
-    QByteArrayData data[4];
-    char stringdata0[47];
+    QByteArrayData data[5];
+    char stringdata0[67];
 };
 #define QT_MOC_LITERAL(idx, ofs, len) \
     Q_STATIC_BYTE_ARRAY_DATA_HEADER_INITIALIZER_WITH_OFFSET(len, \
@@ -33,13 +33,14 @@ struct qt_meta_stringdata_MenuItemClass_t {
 static const qt_meta_stringdata_MenuItemClass_t qt_meta_stringdata_MenuItemClass = {
     {
 QT_MOC_LITERAL(0, 0, 13), // "MenuItemClass"
-QT_MOC_LITERAL(1, 14, 15), // "menuClickedVoid"
-QT_MOC_LITERAL(2, 30, 0), // ""
-QT_MOC_LITERAL(3, 31, 15) // "menuClickedBool"
+QT_MOC_LITERAL(1, 14, 19), // "menuClickedGotoLine"
+QT_MOC_LITERAL(2, 34, 0), // ""
+QT_MOC_LITERAL(3, 35, 15), // "menuClickedVoid"
+QT_MOC_LITERAL(4, 51, 15) // "menuClickedBool"
 
     },
-    "MenuItemClass\0menuClickedVoid\0\0"
-    "menuClickedBool"
+    "MenuItemClass\0menuClickedGotoLine\0\0"
+    "menuClickedVoid\0menuClickedBool"
 };
 #undef QT_MOC_LITERAL
 
@@ -49,7 +50,7 @@ static const uint qt_meta_data_MenuItemClass[] = {
        8,       // revision
        0,       // classname
        0,    0, // classinfo
-       2,   14, // methods
+       3,   14, // methods
        0,    0, // properties
        0,    0, // enums/sets
        0,    0, // constructors
@@ -57,10 +58,12 @@ static const uint qt_meta_data_MenuItemClass[] = {
        0,       // signalCount
 
  // slots: name, argc, parameters, tag, flags
-       1,    0,   24,    2, 0x08 /* Private */,
-       3,    0,   25,    2, 0x08 /* Private */,
+       1,    0,   29,    2, 0x0a /* Public */,
+       3,    0,   30,    2, 0x08 /* Private */,
+       4,    0,   31,    2, 0x08 /* Private */,
 
  // slots: parameters
+    QMetaType::Void,
     QMetaType::Void,
     QMetaType::Bool,
 
@@ -73,8 +76,9 @@ void MenuItemClass::qt_static_metacall(QObject *_o, QMetaObject::Call _c, int _i
         auto *_t = static_cast<MenuItemClass *>(_o);
         Q_UNUSED(_t)
         switch (_id) {
-        case 0: _t->menuClickedVoid(); break;
-        case 1: { bool _r = _t->menuClickedBool();
+        case 0: _t->menuClickedGotoLine(); break;
+        case 1: _t->menuClickedVoid(); break;
+        case 2: { bool _r = _t->menuClickedBool();
             if (_a[0]) *reinterpret_cast< bool*>(_a[0]) = std::move(_r); }  break;
         default: ;
         }
@@ -110,13 +114,13 @@ int MenuItemClass::qt_metacall(QMetaObject::Call _c, int _id, void **_a)
     if (_id < 0)
         return _id;
     if (_c == QMetaObject::InvokeMetaMethod) {
-        if (_id < 2)
+        if (_id < 3)
             qt_static_metacall(this, _c, _id, _a);
-        _id -= 2;
+        _id -= 3;
     } else if (_c == QMetaObject::RegisterMethodArgumentMetaType) {
-        if (_id < 2)
+        if (_id < 3)
             *reinterpret_cast<int*>(_a[0]) = -1;
-        _id -= 2;
+        _id -= 3;
     }
     return _id;
 }
