@@ -1,6 +1,19 @@
-#|/bin/bash
+#!/bin/bash
 
 shopt -s nullglob
 cd "KKEditQT/src"
+
+rm moc_* &>/dev/null
+
+moc KKEditClass.h -o moc_KKEditClass.cpp
+while read
+	do
+		outfile=${REPLY#./*}
+		outfile=moc_${outfile%*.h}.cpp
+		moc $REPLY -o $outfile
+	done < <(find -iname "*QT*.h")
+
 csrclst=$(echo "../src/*.c" "../src/*.cpp")
 echo COMMONSRC = $csrclst > ../sources
+
+exit 0
