@@ -1,4 +1,6 @@
 0.5.0
+code clean.
+temp move to local svn.
 Moving prefs.
 Done view menu.
 Done edit menu.
